# YOLOX_OBB_Application

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/github/ddgrcf/yolox_demo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: yolox_s_dota1_0_deploy_new.param
app/src/main/cpp/: CMakeLists.txt  obb_nms.hpp  yoloxobbncnn_jni.cpp
app/src/main/java/com/github/ddgrcf/yolox_demo/: Constants.java  MainActivity.java  MyUtils.java  SplashActivity.java  YoloxObbNcnn.java
app/src/main/java/com/github/ddgrcf/yolox_demo/MyUtils/: CommonUtils.java  ZoomImageView.java
app/src/main/res/drawable/: ic_log_plane.xml  ic_tencentqq.xml  ic_touch.xml  ic_zhihu.xml  main_btn.xml  main_image_view_title.xml  main_touch_area_stroke_corner.xml  splash_skip_button.xml
app/src/main/res/layout/: activity_main.xml  activity_splash.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/github/ddgrcf/yolox_demo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
